Bug 79343 - Other: Pressing Enter does not go to the next search match in Impress
Summary: Other: Pressing Enter does not go to the next search match in Impress
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other Linux (All)
: medium normal
Assignee: Alex Henrie
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-28 05:20 UTC by Alex Henrie
Modified: 2015-05-02 11:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Henrie 2014-05-28 05:20:20 UTC
When searching in Impress, the focus leaves the search box, so I can't just press Enter to go to the next match. This is different from Writer and Calc where Enter always takes you to the next match after searching.
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
Comment 1 Joel Madero 2014-05-28 05:26:27 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.3 beta1
Platform :Ubuntu 14.04
DE: GNOME3

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Minor - can slow down professional quality work but won't prevent it
Low - default for minor bugs, seems appropriate

Keywords - 

Whiteboard Status - NeedsDevEval (might be an easy fix)

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 2 Alex Henrie 2014-06-18 02:42:06 UTC
I tested with old Ubuntu images and discovered that this bug has been present since before OpenOffice.org and LibreOffice split.
Comment 3 Alex Henrie 2014-07-15 05:48:21 UTC
For what it's worth, this bug is present at least as far back as OpenOffice.org 1.1.3 (Ubuntu 5.04).
Comment 4 Commit Notification 2014-07-21 09:00:19 UTC
Alex Henrie committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59f84b4a2c082382767f12e0c7a06a3f0b52e721

fdo#79343 When searching in Draw or Impress, leave focus in search bar



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.