fdo#79343 When searching in Draw or Impress, leave focus in search bar

Setting bGrabFocus to false resolved the problem.

Change-Id: I7678be76e1cca2a3d58635b4fc44aa3b1cdddb9a
Reviewed-on: https://gerrit.libreoffice.org/10362
Reviewed-by: Joren De Cuyper <jorendc@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>